# fps-game

./: Cargo.toml
assets/: test.gltf
src/: main.rs
web/: index.html  new-game.d.ts  new-game.js  new-game_bg.wasm.d.ts
