[package]
name = "new-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
bevy_rapier3d = "0.16.0"
bevy_obj = "0.8.0"
bevy-inspector-egui = { src = "https://github.com/jakobhellermann/bevy-inspector-egui.git"}

[profile.dev.package.bevy_rapier3d]
opt-level = 3

[profile.release]
codegen-units = 1